--- a/Document/后端接口.md
+++ b/Document/后端接口.md
@@ -60,7 +60,7 @@ Authorization: Bearer {token}
 ## 1. 认证模块
 
 ### 1.1 用户登录
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /auth/login
@@ -91,7 +91,7 @@ POST /auth/login
 ---
 
 ### 1.2 发送验证码
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /auth/send-code
@@ -119,7 +119,7 @@ POST /auth/send-code
 ---
 
 ### 1.3 用户注册
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /auth/register
@@ -153,7 +153,7 @@ POST /auth/register
 ## 2. 用户模块
 
 ### 2.1 获取用户信息
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /user/profile
@@ -182,7 +182,7 @@ GET /user/profile
 ---
 
 ### 2.2 更新用户信息
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 PUT /user/profile
@@ -209,7 +209,7 @@ PUT /user/profile
 ## 3. 快递模块
 
 ### 3.1 获取待取快递列表
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /express/pending
@@ -253,7 +253,7 @@ GET /express/pending
 ---
 
 ### 3.2 获取快递详情
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /express/{expressId}
@@ -287,7 +287,7 @@ GET /express/{expressId}
 ---
 
 ### 3.3 取件（验证取件码）
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /express/pickup
@@ -316,7 +316,7 @@ POST /express/pickup
 ---
 
 ### 3.4 开柜（已验证后再次开柜）
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /express/open
@@ -341,7 +341,7 @@ POST /express/open
 ---
 
 ### 3.5 寄件
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /express/send
@@ -776,11 +776,11 @@ GET /history?type=all&page=1&pageSize=20
 | 认证 | POST /auth/register | ❌ 未实现 |
 | 用户 | GET /user/profile | ❌ 未实现 |
 | 用户 | PUT /user/profile | ❌ 未实现 |
-| 快递 | GET /express/pending | ❌ 未实现 |
-| 快递 | GET /express/{expressId} | ❌ 未实现 |
-| 快递 | POST /express/pickup | ❌ 未实现 |
-| 快递 | POST /express/open | ❌ 未实现 |
-| 快递 | POST /express/send | ❌ 未实现 |
+| 快递 | GET /express/pending | ✅ 已完成 |
+| 快递 | GET /express/{expressId} | ✅ 已完成 |
+| 快递 | POST /express/pickup | ✅ 已完成 |
+| 快递 | POST /express/open | ✅ 已完成 |
+| 快递 | POST /express/send | ✅ 已完成 |
 | 寄存 | POST /storage/create | ❌ 未实现 |
 | 寄存 | GET /storage/list | ❌ 未实现 |
 | 快递柜 | GET /locker/list | ❌ 未实现 |
