docs: 新增Token校验接口文档

--- a/Document/后端接口.md
+++ b/Document/后端接口.md
@@ -150,6 +150,53 @@ POST /auth/register
 
 ---
 
+### 1.4 Token 校验与刷新
+**状态**: ❌ 未实现
+
+```
+POST /auth/verify-token
+```
+
+**请求体**:
+```json
+{
+  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+}
+```
+
+**响应（Token有效）**:
+```json
+{
+  "code": 200,
+  "message": "token有效",
+  "data": {
+    "valid": true,
+    "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+    "expiresIn": 86400,
+    "userId": "10001",
+    "userType": "user"
+  }
+}
+```
+
+**响应（Token无效）**:
+```json
+{
+  "code": 401,
+  "message": "token无效或已过期",
+  "data": {
+    "valid": false
+  }
+}
+```
+
+> **说明**: 
+> - 若 token 有效，返回 code 200，并刷新 token（延长有效期），返回新 token
+> - 若 token 无效或过期，返回 code 401，valid 为 false
+> - expiresIn 单位: 秒
+
+---
+
 ## 2. 用户模块
 
 ### 2.1 获取用户信息
@@ -771,9 +818,10 @@ GET /history?type=all&page=1&pageSize=20
 
 | 模块 | 接口 | 状态 |
 |------|------|------|
-| 认证 | POST /auth/login | ❌ 未实现 |
-| 认证 | POST /auth/send-code | ❌ 未实现 |
-| 认证 | POST /auth/register | ❌ 未实现 |
+| 认证 | POST /auth/login | ✅ 已完成 |
+| 认证 | POST /auth/send-code | ✅ 已完成 |
+| 认证 | POST /auth/register | ✅ 已完成 |
+| 认证 | POST /auth/verify-token | ❌ 未实现 |
 | 用户 | GET /user/profile | ❌ 未实现 |
 | 用户 | PUT /user/profile | ❌ 未实现 |
 | 快递 | GET /express/pending | ✅ 已完成 |
