Token 校验与刷新
1 功能实现
- 新增 POST /api/v1/auth/verify-token 接口，支持Token校验与刷新
- 有效Token返回新Token并延长有效期，无效Token返回401状态
- 按接口文档规范实现，响应格式完全符合要求

-2代码变更

- 创建 VerifyTokenRequest.java 和 VerifyTokenResponse.java DTO类
- 扩展 AuthService 接口，添加 verifyToken 方法
- 在 AuthServiceImpl 中实现Token验证逻辑
- 配置JwtInterceptor，将 /api/v1/auth/verify-token 排除在拦截之外
- 修复有效Token响应的message字段为"token有效"

3.测试覆盖
- 创建 AuthControllerTest.java 测试类
- 编写4个测试用例：生成有效Token、有效Token验证、无效Token验证、过期Token验证
- mvn test -Dtest=AuthControllerTest 运行测试

4. 文档更新

--- a/Document/后端接口.md
+++ b/Document/后端接口.md
@@ -151,7 +151,7 @@ POST /auth/register
 ---
 
 ### 1.4 Token 校验与刷新
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /auth/verify-token
@@ -821,7 +821,7 @@ GET /history?type=all&page=1&pageSize=20
 | 认证 | POST /auth/login | ✅ 已完成 |
 | 认证 | POST /auth/send-code | ✅ 已完成 |
 | 认证 | POST /auth/register | ✅ 已完成 |
-| 认证 | POST /auth/verify-token | ❌ 未实现 |
+| 认证 | POST /auth/verify-token | ✅ 已完成 |
 | 用户 | GET /user/profile | ❌ 未实现 |
 | 用户 | PUT /user/profile | ❌ 未实现 |
 | 快递 | GET /express/pending | ✅ 已完成 |
