--- a/Document/v1.0/软件设计规格说明书.md
+++ b/Document/v1.0/软件设计规格说明书.md
@@ -58,61 +58,7 @@
 系统采用分层架构（Layered Architecture）和前后端分离模式。
 
 #### 3.1.1 总体架构图
-```mermaid
-graph TD
-    %% 客户端层
-    subgraph Client_Layer ["客户端层"]
-        MobileApp["移动端App (Uni-app)"]
-        WebAdmin["Web管理后台 (Vue)"]
-        HwSim["硬件模拟器 (Swing/JavaFX)"]
-    end
-
-    %% 网关层
-    subgraph Gateway_Layer ["网关层"]
-        Nginx["Nginx 反向代理"]
-    end
-
-    %% 业务逻辑层
-    subgraph Business_Logic_Layer ["业务逻辑层"]
-        SpringBoot["Spring Boot 应用服务"]
-        AuthModule["认证授权模块"]
-        LockerModule["柜体管理模块"]
-        OrderModule["订单服务模块"]
-        NotifyModule["通知服务模块"]
-        HwGateway["硬件网关模块"]
-    end
-
-    %% 数据访问层
-    subgraph Data_Access_Layer ["数据访问层"]
-        MyBatis["MyBatis-Plus / JPA"]
-        MySQL[(MySQL 数据库)]
-        Redis[(Redis 缓存)]
-    end
-
-    %% 客户端层到网关层的连接
-    MobileApp -->|HTTP/REST| Nginx
-    WebAdmin -->|HTTP/REST| Nginx
-    HwSim -->|WebSocket| Nginx
-
-    %% 网关层到业务逻辑层的连接
-    Nginx --> SpringBoot
-
-    %% 业务逻辑层内部模块依赖
-    SpringBoot --> AuthModule
-    SpringBoot --> LockerModule
-    SpringBoot --> OrderModule
-    SpringBoot --> NotifyModule
-    SpringBoot --> HwGateway
-
-    %% 业务模块到数据访问层的连接
-    AuthModule --> MyBatis
-    LockerModule --> MyBatis
-    OrderModule --> MyBatis
-
-    %% 数据访问层到存储的连接
-    MyBatis --> MySQL
-    SpringBoot --> Redis
-```
+![](..\v1.0\output\DeploymentDiagram.png)
 
 #### 3.1.2 模块划分
 1.  **用户中心模块 (User Center)**：处理注册、登录、实名认证、个人信息管理。
@@ -127,151 +73,18 @@ graph TD
 ### 3.3 用例设计 (顺序图)
 
 #### 3.3.1 快递员投递时序图
-```mermaid
-sequenceDiagram
-    participant Courier as 快递员
-    participant App as 快递员App
-    participant API as 后端API
-    participant DB as 数据库
-    participant HW as 硬件模拟器
-
-    Courier->>App: 扫描柜体二维码
-    App->>API: GET /lockers/{id}/boxes
-    API->>DB: 查询可用格口
-    DB-->>API: 返回格口列表
-    API-->>App: 显示可用格口(大/中/小)
-    
-    Courier->>App: 选择中号格口 & 输入单号
-    App->>API: POST /orders/deposit
-    API->>DB: 创建订单(Pending)
-    API->>HW: 发送开门指令(BoxID)
-    HW-->>Courier: 弹开柜门
-    
-    Courier->>HW: 放入快件并关门
-    HW->>API: 上报状态(Closed, HasObject)
-    API->>DB: 更新订单状态(Deposited)
-    API->>DB: 生成取件码
-    API-->>Courier: 投递成功通知
-```
+![快递员投递时序图](output/SequenceDiagram_Deposit.png)
 
 #### 3.3.2 用户取件时序图
-```mermaid
-sequenceDiagram
-    participant User as 用户
-    participant Screen as 柜体屏幕
-    participant API as 后端API
-    participant DB as 数据库
-    participant HW as 硬件模拟器
-
-    User->>Screen: 点击“取件”
-    Screen-->>User: 显示键盘
-    User->>Screen: 输入取件码 "123456"
-    Screen->>API: POST /orders/pickup (code="123456")
-    
-    API->>DB: 验证取件码
-    alt 验证通过
-        DB-->>API: 返回订单信息 & BoxID
-        API->>HW: 发送开门指令(BoxID)
-        HW-->>User: 弹开柜门
-        User->>HW: 取走快件并关门
-        HW->>API: 上报状态(Closed, Empty)
-        API->>DB: 更新订单(Finished)
-        API-->>Screen: 显示“取件成功”
-    else 验证失败
-        DB-->>API: 无效码
-        API-->>Screen: 显示“取件码错误”
-    end
-```
+![用户取件时序图](output/SequenceDiagram_Pickup.png)
 
 ### 3.4 类设计
 
 #### 3.4.1 后端业务处理子系统类图
-```mermaid
-classDiagram
-    class User {
-        +Long id
-        +String username
-        +String password
-        +String phone
-        +Integer role
-        +login()
-        +register()
-    }
-    class Courier {
-        +String company
-        +String employeeId
-        +deliver()
-    }
-    class Member {
-        +BigDecimal balance
-        +pickup()
-        +send()
-    }
-    class Locker {
-        +Long id
-        +String serialNo
-        +String location
-        +Integer status
-        +List~Box~ boxes
-    }
-    class Box {
-        +Long id
-        +String boxNo
-        +Integer size
-        +Integer status
-        +Boolean isLocked
-        +open()
-    }
-    class Order {
-        +Long id
-        +String orderNo
-        +Integer type
-        +String trackingNo
-        +String pickupCode
-        +Integer status
-        +create()
-        +updateStatus()
-    }
-    
-    User <|-- Courier
-    User <|-- Member
-    Locker "1" *-- "N" Box
-    Courier "1" --> "N" Order : creates
-    Member "1" --> "N" Order : receives/sends
-    Order "1" --> "1" Box : occupies
-```
+![后端业务处理子系统类图](output/ClassDiagram_Backend.png)
 
 #### 3.4.2 前端App子系统类图 (Vue/Uni-app组件)
-```mermaid
-classDiagram
-    class App {
-        +onLaunch()
-        +onShow()
-    }
-    class Pages {
-    }
-    class LoginRequest {
-        +login(username, password)
-    }
-    class HomePage {
-        +scanQRCode()
-        +inputPickupCode()
-    }
-    class ServicePage {
-        +sendPackage()
-        +storeItems()
-    }
-    class UserCenter {
-        +viewProfile()
-        +viewOrders()
-    }
-    
-    App *-- Pages
-    Pages <|-- HomePage
-    Pages <|-- ServicePage
-    Pages <|-- UserCenter
-    HomePage ..> LoginRequest : uses
-```
+![前端App子系统类图](output/ClassDiagram_Frontend.png)
 
 ### 3.5 数据设计
 本系统使用MySQL数据库存储业务数据。
@@ -343,52 +156,15 @@ classDiagram
 ### 3.6 部署设计
 
 #### 3.6.1 部署图
-```mermaid
-graph TD
-    %% 移动设备层
-    subgraph Mobile_Devices ["移动设备"]
-        Android["Android Phone"]
-        iOS["iOS Phone"]
-    end
-
-    %% 硬件终端层
-    subgraph Hardware_Terminals ["硬件终端"]
-        SimulatorPC["模拟器运行PC"]
-    end
-
-    %% 云服务器层（嵌套子图）
-    subgraph Cloud_Server ["云服务器 (Ubuntu)"]
-        Docker["Docker Engine"]
-        
-        subgraph Docker_Containers ["Docker 容器"]
-            NginxContainer["Nginx Container"]
-            AppContainer["Spring Boot Container"]
-            MySQLContainer["MySQL Container"]
-            RedisContainer["Redis Container"]
-        end
-    end
-
-    %% 设备/终端到Nginx容器的连接
-    Android -->|Internet| NginxContainer
-    iOS -->|Internet| NginxContainer
-    SimulatorPC -->|Internet| NginxContainer
-
-    %% 容器间的依赖连接
-    NginxContainer --> AppContainer
-    AppContainer --> MySQLContainer
-    AppContainer --> RedisContainer
-```
+![部署图](output/DeploymentDiagram.png)
 
 #### 3.6.2 部署说明
-1.  **移动端**：用户和快递员使用安装了App的手机访问系统，App通过HTTPS协议与服务器通信。
-2.  **硬件模拟端**：运行在PC上的Java应用程序，通过WebSocket协议与服务器保持长连接，实时上报状态和接收指令。
-3.  **服务器端**：
-    -   运行在Ubuntu Linux操作系统上。
-    -   使用Docker容器技术部署各个组件，实现环境隔离和快速部署。
-    -   **Nginx**：作为反向代理服务器，处理外部请求，进行负载均衡和静态资源托管。
-    -   **Spring Boot应用**：核心业务服务，运行在独立的容器中。
-    -   **MySQL**：数据存储服务。
-    -   **Redis**：缓存服务。
+1.  **移动端**：用户和快递员使用安装了Android App的手机访问系统，App通过HTTP/REST协议与后端应用通信。
+2.  **Web管理端**：系统管理员通过Web管理后台访问系统，通过HTTP/REST协议与后端应用通信。
+3.  **硬件模拟端**：通过Mdesign绘制的模拟终端，用于模拟快递柜硬件，通过HTTP/REST协议与后端应用通信。
+4.  **后端服务**：
+    -   **Spring Boot应用**：核心业务服务，处理所有业务逻辑。
+    -   **MySQL**：数据存储服务，存储系统所有业务数据。
 
 ### 3.7 接口设计
 -   `POST /api/orders/deposit`：投递下单
