--- a/Document/v1.0/面向对象系统设计说明书.md
+++ b/Document/v1.0/面向对象系统设计说明书.md
@@ -7,12 +7,12 @@
 
 ### 2.1 核心实体类 (Entity Classes)
 系统主要实体类如下：
--   **User**：用户基类，包含 `userId`, `phone`, `password`。
--   **Courier** (extends User)：快递员，增加 `company`, `employeeId`。
--   **Member** (extends User)：普通用户，增加 `balance`。
--   **Locker**：快递柜终端，包含 `lockerId`, `address`, `ipAddress`, `List<Box> boxes`。
--   **Box**：格口，包含 `boxId`, `size` (S/M/L), `status` (FREE/USED/FAULT), `doorState`, `sensorState`。
--   **Order**：订单，包含 `orderId`, `trackingNum`, `pickupCode`, `status`, `createTime`。
+-   **SysUser**：用户类，包含 `id`, `username`, `password`, `phone`, `role`。
+-   **SysCourier**：快递员扩展信息，包含 `id`, `userId`, `company`, `employeeId`。
+-   **IotLocker**：快递柜终端，包含 `id`, `serialNo`, `location`, `ipAddress`, `status`, `List<IotBox> boxes`。
+-   **IotBox**：格口，包含 `id`, `lockerId`, `boxNo`, `size`, `status`, `isLocked`。
+-   **BusOrder**：订单，包含 `id`, `orderNo`, `type`, `trackingNo`, `pickupCode`, `boxId`, `courierId`, `receiverPhone`, `status`, `createTime`, `finishTime`。
+-   **SysConfig**：系统配置，包含 `id`, `paramKey`, `paramValue`, `description`。
 
 ### 2.2 控制类 (Control Classes)
 -   **AuthController**：处理登录注册。
@@ -21,69 +21,22 @@
 -   **HardwareHandler**：处理与硬件模拟器的WebSocket连接。
 
 ### 2.3 关系描述
--   `Locker` 包含多个 `Box` (1:N)。
--   `Courier` 创建多个 `Order` (1:N)。
--   `Order` 关联一个 `Box` (1:1)。
--   `Member` 关联多个 `Order` (1:N, 作为收件人或寄件人)。
+-   `SysUser` 与 `SysCourier` 是1:0..1关系。
+-   `IotLocker` 包含多个 `IotBox` (1:N)。
+-   `BusOrder` 关联一个 `IotBox` (1:1)。
+-   `BusOrder` 关联一个 `SysCourier` (0..1:N)。
+-   `SysUser` 关联多个 `BusOrder` (1:N, 作为收件人)。
+
+### 2.4 类图
+![类图](output/ClassDiagram.png)
 
 ## 3. 顺序图设计 (Sequence Diagram)
 
 ### 3.1 快递员投递时序图
-```mermaid
-sequenceDiagram
-    participant Courier as 快递员
-    participant App as 快递员App
-    participant API as 后端API
-    participant DB as 数据库
-    participant HW as 硬件模拟器
-
-    Courier->>App: 扫描柜体二维码
-    App->>API: GET /lockers/{id}/boxes
-    API->>DB: 查询可用格口
-    DB-->>API: 返回格口列表
-    API-->>App: 显示可用格口(大/中/小)
-    
-    Courier->>App: 选择中号格口 & 输入单号
-    App->>API: POST /orders/deposit
-    API->>DB: 创建订单(Pending)
-    API->>HW: 发送开门指令(BoxID)
-    HW-->>Courier: 弹开柜门
-    
-    Courier->>HW: 放入快件并关门
-    HW->>API: 上报状态(Closed, HasObject)
-    API->>DB: 更新订单状态(Deposited)
-    API->>DB: 生成取件码
-    API-->>Courier: 投递成功通知
-```
+![快递员投递时序图](output/SequenceDiagram_Deposit_OO.png)
 
 ### 3.2 用户取件时序图
-```mermaid
-sequenceDiagram
-    participant User as 用户
-    participant Screen as 柜体屏幕
-    participant API as 后端API
-    participant DB as 数据库
-    participant HW as 硬件模拟器
-
-    User->>Screen: 点击“取件”
-    Screen-->>User: 显示键盘
-    User->>Screen: 输入取件码 "123456"
-    Screen->>API: POST /orders/pickup (code="123456")
-    
-    API->>DB: 验证取件码
-    alt 验证通过
-        DB-->>API: 返回订单信息 & BoxID
-        API->>HW: 发送开门指令(BoxID)
-        HW-->>User: 弹开柜门
-        User->>HW: 取走快件并关门
-        HW->>API: 上报状态(Closed, Empty)
-        API->>DB: 更新订单(Finished)
-        API-->>Screen: 显示“取件成功”
-    else 验证失败
-        DB-->>API: 无效码
-        API-->>Screen: 显示“取件码错误”
-    end
-```
+![用户取件时序图](output/SequenceDiagram_Pickup_OO.png)
 
 ## 4. 状态图设计 (State Chart Diagram)
 
