--- a/Document/v1.0/面向对象系统需求规格说明书.md
+++ b/Document/v1.0/面向对象系统需求规格说明书.md
@@ -14,7 +14,7 @@
 ## 3. 用例模型（Use Case Model）
 
 ### 3.1 总体用例图
-*(此处建议插入MDesign生成的总体用例图)*
+![总体用例图](output/UseCaseDiagram.png)
 -   **快递员用例**：登录、投递快件、查询投递记录。
 -   **用户用例**：注册/登录、取件（扫码/码）、寄件、寄存、人脸认证。
 -   **管理员用例**：登录、设备管理、用户管理、查看报表。
