--- a/Document/v1.0/项目开发计划.md
+++ b/Document/v1.0/项目开发计划.md
@@ -65,13 +65,13 @@
 
 | 角色 | 姓名 | 职责 |
 | :--- | :--- | :--- |
-| **组长** | [温家振] | 项目统筹、架构设计、移动端开发、部分文档 |
-| **组员** | [薛岚夫] | 前端开发、UI设计、前端接口对接、部分文档 |
-| **组员** | [刘梓渝] | 需求分析、后端开发、数据库设计、部分文档 |
-| **组员** | [张书淳] | 后端开发、测试开发、部分文档 |
+| **组长** | [温家振] | 项目统筹、移动端开发 |
+| **组员** | [薛岚夫] | 前端开发、前端接口对接 |
+| **组员** | [刘梓渝] | 后端少部分开发、文档、MDesign硬件模拟 |
+| **组员** | [张书淳] | 后端开发、测试开发 |
 
 ## 5. 开发环境与工具
--   **编程语言**：Java (Spring Boot), Vue/Uni-app, Python
+-   **编程语言**：Java (Spring Boot), Vue/Android-app
 -   **数据库**：MySQL
 -   **工具**：IntelliJ IDEA, WebStorm, Android Studio, Navicat, Postman
 -   **版本控制**：Git (Gitee)
