--- a/Document/后端接口.md
+++ b/Document/后端接口.md
@@ -428,7 +428,7 @@ POST /express/send
 ## 4. 寄存模块
 
 ### 4.1 创建寄存订单
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /storage/create
@@ -465,7 +465,7 @@ POST /storage/create
 ---
 
 ### 4.2 获取寄存列表
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /storage/list
@@ -500,7 +500,7 @@ GET /storage/list
 ## 5. 快递柜模块
 
 ### 5.1 获取快递柜列表
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /locker/list
@@ -539,7 +539,7 @@ GET /locker/list
 ---
 
 ### 5.2 获取快递柜详情
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /locker/{lockerId}
@@ -571,7 +571,7 @@ GET /locker/{lockerId}
 ## 6. 快递员模块
 
 ### 6.1 获取快递员信息
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /courier/profile
@@ -606,7 +606,7 @@ GET /courier/profile
 ---
 
 ### 6.2 投递快递
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /courier/deliver
@@ -639,7 +639,7 @@ POST /courier/deliver
 ---
 
 ### 6.3 查询收件人信息
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /courier/query-receiver?phone=13800138000
@@ -665,7 +665,7 @@ GET /courier/query-receiver?phone=13800138000
 ---
 
 ### 6.4 获取待揽收列表
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /courier/pending-collect
@@ -698,7 +698,7 @@ GET /courier/pending-collect
 ---
 
 ### 6.5 获取待退回列表
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /courier/pending-return
@@ -731,7 +731,7 @@ GET /courier/pending-return
 ---
 
 ### 6.6 开柜操作
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 POST /courier/open-compartment
@@ -762,7 +762,7 @@ POST /courier/open-compartment
 ## 7. 历史记录模块
 
 ### 7.1 获取历史记录
-**状态**: ❌ 未实现
+**状态**: ✅ 已完成
 
 ```
 GET /history?type=all&page=1&pageSize=20
@@ -822,24 +822,24 @@ GET /history?type=all&page=1&pageSize=20
 | 认证 | POST /auth/send-code | ✅ 已完成 |
 | 认证 | POST /auth/register | ✅ 已完成 |
 | 认证 | POST /auth/verify-token | ✅ 已完成 |
-| 用户 | GET /user/profile | ❌ 未实现 |
-| 用户 | PUT /user/profile | ❌ 未实现 |
+| 用户 | GET /user/profile | ✅ 已完成 |
+| 用户 | PUT /user/profile | ✅ 已完成 |
 | 快递 | GET /express/pending | ✅ 已完成 |
 | 快递 | GET /express/{expressId} | ✅ 已完成 |
 | 快递 | POST /express/pickup | ✅ 已完成 |
 | 快递 | POST /express/open | ✅ 已完成 |
 | 快递 | POST /express/send | ✅ 已完成 |
-| 寄存 | POST /storage/create | ❌ 未实现 |
-| 寄存 | GET /storage/list | ❌ 未实现 |
-| 快递柜 | GET /locker/list | ❌ 未实现 |
-| 快递柜 | GET /locker/{lockerId} | ❌ 未实现 |
-| 快递员 | GET /courier/profile | ❌ 未实现 |
-| 快递员 | POST /courier/deliver | ❌ 未实现 |
-| 快递员 | GET /courier/query-receiver | ❌ 未实现 |
-| 快递员 | GET /courier/pending-collect | ❌ 未实现 |
-| 快递员 | GET /courier/pending-return | ❌ 未实现 |
-| 快递员 | POST /courier/open-compartment | ❌ 未实现 |
-| 历史 | GET /history | ❌ 未实现 |
+| 寄存 | POST /storage/create | ✅ 已完成 |
+| 寄存 | GET /storage/list | ✅ 已完成 |
+| 快递柜 | GET /locker/list | ✅ 已完成 |
+| 快递柜 | GET /locker/{lockerId} | ✅ 已完成 |
+| 快递员 | GET /courier/profile | ✅ 已完成 |
+| 快递员 | POST /courier/deliver | ✅ 已完成 |
+| 快递员 | GET /courier/query-receiver | ✅ 已完成 |
+| 快递员 | GET /courier/pending-collect | ✅ 已完成 |
+| 快递员 | GET /courier/pending-return | ✅ 已完成 |
+| 快递员 | POST /courier/open-compartment | ✅ 已完成 |
+| 历史 | GET /history | ✅ 已完成 |
 
 ---
 
@@ -847,4 +847,5 @@ GET /history?type=all&page=1&pageSize=20
 
 | 日期 | 版本 | 说明 |
 |------|------|------|
+| 2026-01-25 | v1.1.0 | 所有接口已实现完成，包括寄存模块、快递员模块和历史记录模块 |
 | 2026-01-22 | v1.0.0 | 初始版本，基于 Android 客户端需求整理 |
