docs: 标记用户和寄存接口已完成

--- a/Document/后端接口.md
+++ b/Document/后端接口.md
@@ -822,15 +822,15 @@ GET /history?type=all&page=1&pageSize=20
 | 认证 | POST /auth/send-code | ✅ 已完成 |
 | 认证 | POST /auth/register | ✅ 已完成 |
 | 认证 | POST /auth/verify-token | ✅ 已完成 |
-| 用户 | GET /user/profile | ❌ 未实现 |
-| 用户 | PUT /user/profile | ❌ 未实现 |
+| 用户 | GET /user/profile | ✅ 已完成 |
+| 用户 | PUT /user/profile | ✅ 已完成 |
 | 快递 | GET /express/pending | ✅ 已完成 |
 | 快递 | GET /express/{expressId} | ✅ 已完成 |
 | 快递 | POST /express/pickup | ✅ 已完成 |
 | 快递 | POST /express/open | ✅ 已完成 |
 | 快递 | POST /express/send | ✅ 已完成 |
 | 寄存 | POST /storage/create | ❌ 未实现 |
-| 寄存 | GET /storage/list | ❌ 未实现 |
+| 寄存 | GET /storage/list | ✅ 已完成 |
 | 快递柜 | GET /locker/list | ❌ 未实现 |
 | 快递柜 | GET /locker/{lockerId} | ❌ 未实现 |
 | 快递员 | GET /courier/profile | ❌ 未实现 |
