feat: 添加新版寄存模块接口和UI实现

--- a/Document/后端接口.md
+++ b/Document/后端接口.md
@@ -497,6 +497,37 @@ GET /storage/list
 
 ---
 
+### 4.3 获取快递柜可用格口信息
+**状态**: ✅ 已完成
+
+```
+GET /locker/availability/{lockerId}
+```
+
+**路径参数**:
+| 参数 | 类型 | 说明 |
+|------|------|------|
+| lockerId | Long | 快递柜ID |
+
+**响应**:
+```json
+{
+  "code": 200,
+  "message": "success",
+  "data": {
+    "lockerId": 1,
+    "lockerName": "A区1号柜",
+    "smallCount": 3,
+    "mediumCount": 5,
+    "largeCount": 2
+  }
+}
+```
+
+> **说明**: 此接口用于显示某个快递柜各类型格口的实时可用数量，便于用户在创建寄存订单时了解可选择的格口情况
+
+---
+
 ## 5. 快递柜模块
 
 ### 5.1 获取快递柜列表
