--- a/Document/v1.0/数据库设计说明书.md
+++ b/Document/v1.0/数据库设计说明书.md
@@ -20,89 +20,99 @@
 
 ### 3.1 用户表 (sys_user)
 存储系统所有用户的基本信息。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键，自增 |
-| username | VARCHAR | 50 | Y | 用户名/账号 |
-| password | VARCHAR | 100 | Y | 加密密码 |
-| phone | VARCHAR | 20 | Y | 手机号 |
-| role | TINYINT | 1 | Y | 角色：0-管理员，1-用户，2-快递员 |
-| create_time | DATETIME | - | Y | 创建时间 |
+| 字段名      | 类型     | 长度 | 必填 | 说明                             |
+| :---------- | :------- | :--- | :--- | :------------------------------- |
+| id          | BIGINT   | 20   | Y    | 主键，自增                       |
+| username    | VARCHAR  | 50   | Y    | 用户名/账号                      |
+| password    | VARCHAR  | 100  | Y    | 加密密码                         |
+| phone       | VARCHAR  | 20   | Y    | 手机号                           |
+| role        | TINYINT  | 1    | Y    | 角色：0-管理员，1-用户，2-快递员 |
+| create_time | DATETIME | -    | Y    | 创建时间                         |
 
 ### 3.2 快递员信息表 (sys_courier)
 快递员扩展信息。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| user_id | BIGINT | 20 | Y | 关联sys_user.id |
-| company | VARCHAR | 50 | Y | 所属快递公司 |
-| employee_id | VARCHAR | 50 | N | 工号 |
-| create_time | DATETIME | - | Y | 创建时间 |
+| 字段名      | 类型     | 长度 | 必填 | 说明            |
+| :---------- | :------- | :--- | :--- | :-------------- |
+| id          | BIGINT   | 20   | Y    | 主键            |
+| user_id     | BIGINT   | 20   | Y    | 关联sys_user.id |
+| company     | VARCHAR  | 50   | Y    | 所属快递公司    |
+| employee_id | VARCHAR  | 50   | N    | 工号            |
+| create_time | DATETIME | -    | Y    | 创建时间        |
 
 ### 3.3 快递柜表 (iot_locker)
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| serial_no | VARCHAR | 50 | Y | 设备序列号 |
-| location | VARCHAR | 100 | Y | 部署地址 |
-| ip_address | VARCHAR | 50 | N | 设备IP地址 |
-| status | TINYINT | 1 | Y | 状态：0-离线，1-在线 |
-| create_time | DATETIME | - | Y | 创建时间 |
+| 字段名           | 类型     | 长度 | 必填 | 说明                     |
+| :--------------- | :------- | :--- | :--- | :----------------------- |
+| id               | BIGINT   | 20   | Y    | 主键                     |
+| serial_no        | VARCHAR  | 50   | Y    | 设备序列号               |
+| location         | VARCHAR  | 100  | Y    | 部署地址                 |
+| ip_address       | VARCHAR  | 50   | N    | 设备IP地址               |
+| status           | TINYINT  | 1    | Y    | 在线状态：0-离线，1-在线 |
+| enabled          | TINYINT  | 1    | Y    | 是否启用：0-禁用，1-启用 |
+| temperature      | DECIMAL  | 5,2  | N    | 温度(°C)                 |
+| humidity         | DECIMAL  | 5,2  | N    | 湿度(%)                  |
+| last_online_time | DATETIME | -    | N    | 最后在线时间             |
+| remark           | VARCHAR  | 255  | N    | 备注                     |
+| create_time      | DATETIME | -    | Y    | 创建时间                 |
 
 ### 3.4 格口表 (iot_box)
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| locker_id | BIGINT | 20 | Y | 关联iot_locker.id |
-| box_no | VARCHAR | 10 | Y | 格口编号（如A01） |
-| size | TINYINT | 1 | Y | 尺寸：1-小，2-中，3-大 |
-| status | TINYINT | 1 | Y | 状态：0-空闲，1-占用，2-故障 |
-| is_locked | TINYINT | 1 | Y | 门锁状态：0-开，1-关 |
-| create_time | DATETIME | - | Y | 创建时间 |
+| 字段名       | 类型     | 长度 | 必填 | 说明                             |
+| :----------- | :------- | :--- | :--- | :------------------------------- |
+| id           | BIGINT   | 20   | Y    | 主键                             |
+| locker_id    | BIGINT   | 20   | Y    | 关联iot_locker.id                |
+| box_no       | VARCHAR  | 10   | Y    | 格口编号（如A01）                |
+| size         | TINYINT  | 1    | Y    | 尺寸：1-小，2-中，3-大           |
+| status       | TINYINT  | 1    | Y    | 业务状态：0-空闲，1-占用，2-故障 |
+| enabled      | TINYINT  | 1    | Y    | 是否启用：0-禁用，1-启用         |
+| is_locked    | TINYINT  | 1    | Y    | 门锁状态：0-开，1-关             |
+| pressure     | DECIMAL  | 5,2  | N    | 压力传感器数值(kg)               |
+| temperature  | DECIMAL  | 5,2  | N    | 格口内温度(°C)                   |
+| humidity     | DECIMAL  | 5,2  | N    | 格口内湿度(%)                    |
+| fault_reason | VARCHAR  | 100  | N    | 故障原因                         |
+| create_time  | DATETIME | -    | Y    | 创建时间                         |
 
 ### 3.5 订单表 (bus_order)
 核心业务表。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| order_no | VARCHAR | 50 | Y | 业务订单号 |
-| type | TINYINT | 1 | Y | 类型：1-投递，2-寄件，3-寄存 |
-| tracking_no | VARCHAR | 50 | N | 快递单号 |
-| pickup_code | VARCHAR | 10 | N | 取件码 |
-| box_id | BIGINT | 20 | Y | 关联格口ID |
-| courier_id | BIGINT | 20 | N | 投递员ID |
-| user_id | BIGINT | 20 | N | 用户ID |
-| receiver_phone | VARCHAR | 20 | Y | 收件人手机 |
-| status | TINYINT | 1 | Y | 0-待取，1-已取，2-超时 |
-| create_time | DATETIME | - | Y | 投递时间 |
-| finish_time | DATETIME | - | N | 取件时间 |
+| 字段名         | 类型     | 长度 | 必填 | 说明                         |
+| :------------- | :------- | :--- | :--- | :--------------------------- |
+| id             | BIGINT   | 20   | Y    | 主键                         |
+| order_no       | VARCHAR  | 50   | Y    | 业务订单号                   |
+| type           | TINYINT  | 1    | Y    | 类型：1-投递，2-寄件，3-寄存 |
+| tracking_no    | VARCHAR  | 50   | N    | 快递单号                     |
+| pickup_code    | VARCHAR  | 10   | N    | 取件码                       |
+| box_id         | BIGINT   | 20   | Y    | 关联格口ID                   |
+| courier_id     | BIGINT   | 20   | N    | 投递员ID                     |
+| user_id        | BIGINT   | 20   | N    | 用户ID                       |
+| receiver_phone | VARCHAR  | 20   | Y    | 收件人手机                   |
+| status         | TINYINT  | 1    | Y    | 0-待取，1-已取，2-超时       |
+| create_time    | DATETIME | -    | Y    | 投递时间                     |
+| finish_time    | DATETIME | -    | N    | 取件时间                     |
 
 ### 3.6 操作日志表 (sys_log)
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| user_id | BIGINT | 20 | N | 操作人ID |
-| operation | VARCHAR | 50 | Y | 操作类型（如：远程开门） |
-| content | TEXT | - | N | 详细内容 |
-| create_time | DATETIME | - | Y | 时间 |
+| 字段名      | 类型     | 长度 | 必填 | 说明                     |
+| :---------- | :------- | :--- | :--- | :----------------------- |
+| id          | BIGINT   | 20   | Y    | 主键                     |
+| user_id     | BIGINT   | 20   | N    | 操作人ID                 |
+| operation   | VARCHAR  | 50   | Y    | 操作类型（如：远程开门） |
+| content     | TEXT     | -    | N    | 详细内容                 |
+| create_time | DATETIME | -    | Y    | 时间                     |
 
 ### 3.7 系统配置表 (sys_config)
 存储系统全局参数配置。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| param_key | VARCHAR | 50 | Y | 参数键名 |
-| param_value | VARCHAR | 255 | Y | 参数值 |
-| description | VARCHAR | 255 | N | 参数说明 |
+| 字段名      | 类型    | 长度 | 必填 | 说明     |
+| :---------- | :------ | :--- | :--- | :------- |
+| id          | BIGINT  | 20   | Y    | 主键     |
+| param_key   | VARCHAR | 50   | Y    | 参数键名 |
+| param_value | VARCHAR | 255  | Y    | 参数值   |
+| description | VARCHAR | 255  | N    | 参数说明 |
 
 ### 3.8 电量统计表 (iot_power_stats)
 记录快递柜用电情况。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| locker_id | BIGINT | 20 | Y | 关联快递柜 |
-| power_usage | DECIMAL | 10,2 | Y | 用电量(kWh) |
-| record_date | DATE | - | Y | 记录日期 |
+| 字段名      | 类型    | 长度 | 必填 | 说明        |
+| :---------- | :------ | :--- | :--- | :---------- |
+| id          | BIGINT  | 20   | Y    | 主键        |
+| locker_id   | BIGINT  | 20   | Y    | 关联快递柜  |
+| power_usage | DECIMAL | 10,2 | Y    | 用电量(kWh) |
+| record_date | DATE    | -    | Y    | 记录日期    |
 
 ## 4. 索引设计
 -   `sys_user`: unique index on `username`, `phone`
