--- a/Document/v1.0/软件设计规格说明书.md
+++ b/Document/v1.0/软件设计规格说明书.md
@@ -43,14 +43,14 @@
 
 ### 2.3 技术选型
 
-| 组件 | 技术栈 | 说明 |
-| :--- | :--- | :--- |
-| **后端框架** | Java Spring Boot 3.x | 核心业务逻辑，提供RESTful API |
-| **前端框架** | Vue 3 + Element Plus | Web管理后台 |
-| **移动端** | Uni-app (Vue) | 跨平台App开发 (Android/iOS/H5) |
-| **数据库** | MySQL 8.0 | 关系型数据存储 |
-| **ORM**      | MyBatis-Plus / JPA        | 数据持久层框架                 |
-| **通信协议** | HTTP (RESTful), WebSocket | 前后端交互，实时状态推送       |
+| 组件         | 技术栈                                    | 说明                              |
+| :----------- | :---------------------------------------- | :-------------------------------- |
+| **后端框架** | Java Spring Boot 3.x                      | 核心业务逻辑，提供RESTful API     |
+| **前端框架** | Vue 3 + Element Plus                      | Web管理后台                       |
+| **移动端**   | Android Native (Kotlin) + Jetpack Compose | 原生App开发，提供更好的性能与体验 |
+| **数据库**   | MySQL 8.0                                 | 关系型数据存储                    |
+| **ORM**      | MyBatis-Plus                              | 数据持久层框架                    |
+| **通信协议** | HTTP (RESTful)                            | 前后端交互，WebSocket用于实时通知 |
 
 ## 3. 软件设计
 
@@ -91,67 +91,67 @@
 
 #### 3.5.1 用户表 (sys_user)
 存储系统所有用户的基本信息。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键，自增 |
-| username | VARCHAR | 50 | Y | 用户名/账号 |
-| password | VARCHAR | 100 | Y | 加密密码 |
-| phone | VARCHAR | 20 | Y | 手机号 |
-| role | TINYINT | 1 | Y | 角色：0-管理员，1-用户，2-快递员 |
-| create_time | DATETIME | - | Y | 创建时间 |
+| 字段名      | 类型     | 长度 | 必填 | 说明                             |
+| :---------- | :------- | :--- | :--- | :------------------------------- |
+| id          | BIGINT   | 20   | Y    | 主键，自增                       |
+| username    | VARCHAR  | 50   | Y    | 用户名/账号                      |
+| password    | VARCHAR  | 100  | Y    | 加密密码                         |
+| phone       | VARCHAR  | 20   | Y    | 手机号                           |
+| role        | TINYINT  | 1    | Y    | 角色：0-管理员，1-用户，2-快递员 |
+| create_time | DATETIME | -    | Y    | 创建时间                         |
 
 #### 3.5.2 快递员信息表 (sys_courier)
 快递员扩展信息。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| user_id | BIGINT | 20 | Y | 关联sys_user.id |
-| company | VARCHAR | 50 | Y | 所属快递公司 |
-| employee_id | VARCHAR | 50 | N | 工号 |
+| 字段名      | 类型    | 长度 | 必填 | 说明            |
+| :---------- | :------ | :--- | :--- | :-------------- |
+| id          | BIGINT  | 20   | Y    | 主键            |
+| user_id     | BIGINT  | 20   | Y    | 关联sys_user.id |
+| company     | VARCHAR | 50   | Y    | 所属快递公司    |
+| employee_id | VARCHAR | 50   | N    | 工号            |
 
 #### 3.5.3 快递柜表 (iot_locker)
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| serial_no | VARCHAR | 50 | Y | 设备序列号 |
-| location | VARCHAR | 100 | Y | 部署地址 |
-| ip_address | VARCHAR | 50 | N | 设备IP地址 |
-| status | TINYINT | 1 | Y | 状态：0-离线，1-在线 |
+| 字段名     | 类型    | 长度 | 必填 | 说明                 |
+| :--------- | :------ | :--- | :--- | :------------------- |
+| id         | BIGINT  | 20   | Y    | 主键                 |
+| serial_no  | VARCHAR | 50   | Y    | 设备序列号           |
+| location   | VARCHAR | 100  | Y    | 部署地址             |
+| ip_address | VARCHAR | 50   | N    | 设备IP地址           |
+| status     | TINYINT | 1    | Y    | 状态：0-离线，1-在线 |
 
 #### 3.5.4 格口表 (iot_box)
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| locker_id | BIGINT | 20 | Y | 关联iot_locker.id |
-| box_no | VARCHAR | 10 | Y | 格口编号（如A01） |
-| size | TINYINT | 1 | Y | 尺寸：1-小，2-中，3-大 |
-| status | TINYINT | 1 | Y | 状态：0-空闲，1-占用，2-故障 |
-| is_locked | TINYINT | 1 | Y | 门锁状态：0-开，1-关 |
+| 字段名    | 类型    | 长度 | 必填 | 说明                         |
+| :-------- | :------ | :--- | :--- | :--------------------------- |
+| id        | BIGINT  | 20   | Y    | 主键                         |
+| locker_id | BIGINT  | 20   | Y    | 关联iot_locker.id            |
+| box_no    | VARCHAR | 10   | Y    | 格口编号（如A01）            |
+| size      | TINYINT | 1    | Y    | 尺寸：1-小，2-中，3-大       |
+| status    | TINYINT | 1    | Y    | 状态：0-空闲，1-占用，2-故障 |
+| is_locked | TINYINT | 1    | Y    | 门锁状态：0-开，1-关         |
 
 #### 3.5.5 订单表 (bus_order)
 核心业务表。
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| order_no | VARCHAR | 50 | Y | 业务订单号 |
-| type | TINYINT | 1 | Y | 类型：1-投递，2-寄件，3-寄存 |
-| tracking_no | VARCHAR | 50 | N | 快递单号 |
-| pickup_code | VARCHAR | 10 | N | 取件码 |
-| box_id | BIGINT | 20 | Y | 关联格口ID |
-| courier_id | BIGINT | 20 | N | 投递员ID |
-| receiver_phone | VARCHAR | 20 | Y | 收件人手机 |
-| status | TINYINT | 1 | Y | 0-待取，1-已取，2-超时 |
-| create_time | DATETIME | - | Y | 投递时间 |
-| finish_time | DATETIME | - | N | 取件时间 |
+| 字段名         | 类型     | 长度 | 必填 | 说明                         |
+| :------------- | :------- | :--- | :--- | :--------------------------- |
+| id             | BIGINT   | 20   | Y    | 主键                         |
+| order_no       | VARCHAR  | 50   | Y    | 业务订单号                   |
+| type           | TINYINT  | 1    | Y    | 类型：1-投递，2-寄件，3-寄存 |
+| tracking_no    | VARCHAR  | 50   | N    | 快递单号                     |
+| pickup_code    | VARCHAR  | 10   | N    | 取件码                       |
+| box_id         | BIGINT   | 20   | Y    | 关联格口ID                   |
+| courier_id     | BIGINT   | 20   | N    | 投递员ID                     |
+| receiver_phone | VARCHAR  | 20   | Y    | 收件人手机                   |
+| status         | TINYINT  | 1    | Y    | 0-待取，1-已取，2-超时       |
+| create_time    | DATETIME | -    | Y    | 投递时间                     |
+| finish_time    | DATETIME | -    | N    | 取件时间                     |
 
 #### 3.5.6 操作日志表 (sys_log)
-| 字段名 | 类型 | 长度 | 必填 | 说明 |
-| :--- | :--- | :--- | :--- | :--- |
-| id | BIGINT | 20 | Y | 主键 |
-| user_id | BIGINT | 20 | N | 操作人ID |
-| operation | VARCHAR | 50 | Y | 操作类型（如：远程开门） |
-| content | TEXT | - | N | 详细内容 |
-| create_time | DATETIME | - | Y | 时间 |
+| 字段名      | 类型     | 长度 | 必填 | 说明                     |
+| :---------- | :------- | :--- | :--- | :----------------------- |
+| id          | BIGINT   | 20   | Y    | 主键                     |
+| user_id     | BIGINT   | 20   | N    | 操作人ID                 |
+| operation   | VARCHAR  | 50   | Y    | 操作类型（如：远程开门） |
+| content     | TEXT     | -    | N    | 详细内容                 |
+| create_time | DATETIME | -    | Y    | 时间                     |
 
 ### 3.6 部署设计
 
